<resources>
    <string name="app_name">Dangonngu2803</string>
    <string name="text_tieu_De">Log In</string>
    <string name="edt_tai_khoan">Username</string>
    <string name="edt_mat_khau">Password</string>
    <string name="btn_dang_nhap">Login</string>
    <string name="btn_dang_ky">Register</string>
    <string name="text_tai_khoan">User</string>
    <string name="text_mat_khau">Password</string>
</resources>

