<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textviewTieude"
        android:textAllCaps="true"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:textColor="#f20"
        android:textSize="45sp"
        android:text="@string/text_tieu_De"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <EditText
        android:inputType="text"
        android:hint="@string/edt_tai_khoan"
        android:layout_marginTop="30dp"
        android:layout_below="@id/textviewTieude"
        android:id="@+id/edittextTaikhoan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:inputType="numberPassword"
        android:hint="@string/edt_mat_khau"
        android:layout_marginTop="30dp"
        android:layout_below="@id/edittextTaikhoan"
        android:id="@+id/edittextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_marginLeft="30dp"
        android:text="@string/btn_dang_nhap"
        android:layout_marginTop="50dp"
        android:layout_below="@id/edittextPassword"
        android:id="@+id/buttonDangnhap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:text="@string/btn_dang_ky"
        android:layout_marginTop="50dp"
        android:layout_below="@id/edittextPassword"
        android:id="@+id/buttonDangky"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/buttonDangky"
        android:id="@+id/textNoidung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>